# reynolds-model

./: .gitignore  README.md  parametric_v2.py  pyproject.toml  requirements.txt  run_all_stages.py  run_example.py  run_stage1.py  run_stage10_orbits.py  run_stage11_parametric.py  run_stage2.py  run_stage3.py  run_stage4.py  run_stage5.py  run_stage6.py  run_stage7.py  run_stage8.py  run_stage9_validation.py  stage1.py
bearing_solver/: __init__.py  config.py  dynamics.py  equilibrium.py  film_models.py  forces.py  orbits.py  parametric.py  reynolds_solver.py  roughness.py  stability.py  texture.py  validation.py  visualization.py
bearing_solver/tests/: __init__.py  test_reynolds.py
tools/: generate_report_figures.py  roughness_influence_sandbox.py
